--- a/common/src/main/resources/assets/polylib/lang/en_us.json
+++ b/common/src/main/resources/assets/polylib/lang/en_us.json
@@ -7,6 +7,7 @@
   "fluid_tank.polylib.capacity": "Capacity:",
   "fluid_tank.polylib.stored": "Stored:",
   "fluid_tank.polylib.mb": "mB",
+  "fluid_tank.polylib.contains": "Contains:",
   "rs_mode.polylib.active_high": "Active with redstone signal",
   "rs_mode.polylib.active_low": "Active without redstone signal",
   "rs_mode.polylib.always_active": "Always active",
